--- a/login.html
+++ b/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>eNAGAR</title>
+  <title>Enagar-muncipal services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -12,7 +13,6 @@
   <link href="assets/css/prettyPhoto.css" rel="stylesheet">
   <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="assets/css/flexslider.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/color/default.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,600,400italic|Open+Sans:400,600,700" rel="stylesheet">
@@ -26,7 +26,8 @@
 
   <!-- =======================================================
     Theme Name: enagar
-  ======================================================= -->
+    Author: SRT
+      ======================================================= -->
 </head>
 
 
@@ -54,7 +55,7 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-cog"></i> SERVICES <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="waste.html">WASTE MANAGEMENT</a></li>
+                      <li><a href="map.html">WASTE MANAGEMENT</a></li>
                       <li><a href="color-scheme.html">ISSUE LICENSE</a></li>
                       </ul>
                   <li class="dropdown">
@@ -77,8 +78,8 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-book"></i> BOOKING <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">HALLBOOKING</a></li>
-                      <li><a href="blog-right-sidebar.html">GAS BOOKING</a></li>
+                      <li><a href="hall.html">HALLBOOKING</a></li>
+                      <li><a href="gas.html">GAS BOOKING</a></li>
                     </ul>
                   </li>
                       <li class="dropdown">
@@ -97,7 +98,7 @@
                           <li><a href="#">BUILDING PERMISSIONS</a></li>
                           <li><a href="#">WATER SUPPLY</a></li>
                           <li><a href="#">GRIEVANCE</a></li>
-                          <li class="dropdown"><a href="#"> REGISTRATIONS<i class="icon-angle-down"></i></a>
+                          <li class="dropdown"><a href="#"> REGISTRATIONS<i class="icon-angle-right"></i></a>
                         <ul class="dropdown-menu sub-menu">
                           <li><a href="#">BIRTH REGISTRATION</a></li>
                           <li><a href="#">DEATH REGISTRATION</a></li>
@@ -106,13 +107,19 @@
                       </li>
                     </ul>
                   </li>
-                    <li><a href="login.html"><i class="icon-user"></i> LOGIN|SIGNUP</a></li>
+                   <li class="dropdown"><a href="#"> LOGIN | SIGNUP<i class="icon-user"></i></a>
+                        <ul class="dropdown-menu sub-menu">
+                          <li><a href="login.html">USER LOGIN<i class="icon-user"></i></a></li>
+                          <li><a href="login1.html">DEPARTMENT LOGIN<i class="icon-user-md"></i></a></li>
+                        </ul>
                   </li>
                 </ul>
               </nav>
-            </div></head>
-<div id="container_demo" >
+            </div>
+            <!-- end menu -->
+<div>
 	<ul></ul><ul></ul>
+  <div style="text-align: center" class="navigation" >
 	<div class="navigation">
               <nav>
                 <ul class="nav centrenav">
@@ -120,6 +127,7 @@
 		<div id="login" class="animate form">
 			<form  action="mysuperscript.php" autocomplete="on"> 
 				<h1>Log in</h1> 
+        <div class="container">
 				<p> 
 					<label for="username" class="uname" data-icon="u" > Your email or username </label>
 					<input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
@@ -140,14 +148,15 @@
 					<a href="register.html" class="to_register">Join us</a>
 				</p>
 			</form>
-		</div></div></li></ul>
+	</div></li></ul>
 
 				</li></ul>
 								</p>
-			</form>
+			</form></nav>
 		</div>
 		
 	</div>
+</div class="container_demo">
 </div>
    <!-- Footer
  ================================================== -->
