--- a/login1.html
+++ b/login1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>eNAGAR</title>
+  <title>Enagar-muncipal services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -12,7 +13,6 @@
   <link href="assets/css/prettyPhoto.css" rel="stylesheet">
   <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="assets/css/flexslider.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/color/default.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,600,400italic|Open+Sans:400,600,700" rel="stylesheet">
@@ -26,7 +26,8 @@
 
   <!-- =======================================================
     Theme Name: enagar
-  ======================================================= -->
+    Author: SRT
+      ======================================================= -->
 </head>
 
 
@@ -54,7 +55,7 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-cog"></i> SERVICES <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="waste.html">WASTE MANAGEMENT</a></li>
+                      <li><a href="map.html">WASTE MANAGEMENT</a></li>
                       <li><a href="color-scheme.html">ISSUE LICENSE</a></li>
                       </ul>
                   <li class="dropdown">
@@ -77,8 +78,8 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-book"></i> BOOKING <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">HALLBOOKING</a></li>
-                      <li><a href="blog-right-sidebar.html">GAS BOOKING</a></li>
+                      <li><a href="hall.html">HALLBOOKING</a></li>
+                      <li><a href="gas.html">GAS BOOKING</a></li>
                     </ul>
                   </li>
                       <li class="dropdown">
@@ -97,7 +98,7 @@
                           <li><a href="#">BUILDING PERMISSIONS</a></li>
                           <li><a href="#">WATER SUPPLY</a></li>
                           <li><a href="#">GRIEVANCE</a></li>
-                          <li class="dropdown"><a href="#"> REGISTRATIONS<i class="icon-angle-down"></i></a>
+                          <li class="dropdown"><a href="#"> REGISTRATIONS<i class="icon-angle-right"></i></a>
                         <ul class="dropdown-menu sub-menu">
                           <li><a href="#">BIRTH REGISTRATION</a></li>
                           <li><a href="#">DEATH REGISTRATION</a></li>
@@ -106,63 +107,50 @@
                       </li>
                     </ul>
                   </li>
-                    <li class="dropdown"><a href="login.html"><i class="icon-user"></i> LOGIN|SIGNUP</a></li>
-                    <ul class="dropdown-menu sub-menu">
-                    <li><a href="login.html">USER LOGINS</a></li>
-                    <li><a href="login1.html">DEPARTMENT LOGIN</a></li>
+                   <li class="dropdown"><a href="#"> LOGIN | SIGNUP<i class="icon-user"></i></a>
+                        <ul class="dropdown-menu sub-menu">
+                          <li><a href="login.html">USER LOGIN<i class="icon-user"></i></a></li>
+                          <li><a href="login1.html">DEPARTMENT LOGIN<i class="icon-user-md"></i></a></li>
+                        </ul>
                   </li>
                 </ul>
               </nav>
-            </div></head>
-            </div id="container_demo" >
-              <!---->
-
- <font color="white">
-	<div style="text-align: center" class="navigation" >
+          
+            <!-- end menu -->
+<div id="container_demo" >
+	<ul></ul><ul></ul>
+	<div class="navigation">
               <nav>
                 <ul class="nav centrenav">
-                  <li class="active">
-		<div id="register" class="animate form" style><font color="white">
+	<div id="wrapper">
+		<div id="login" class="animate form">
 			<form  action="mysuperscript.php" autocomplete="on"> 
-				<div>
-              <nav>
-                <ul class="nav centrenav">
-                  <li class="active" ><h1><font color="white">
-                     Sign up </font></h1>
-			 <div class="container">
-        <p>
-					<label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-					<input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="username" />
+				<h1>DEPARTMENT Log in</h1> 
+				<p> 
+					<label for="username" class="uname" data-icon="u" > Your email or username </label>
+					<input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
 				</p>
 				<p> 
-					<label for="emailsignup" class="youmail" data-icon="e" >Email</label>
-					<input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="********@mail.com"/> 
+					<label for="password" class="youpasswd" data-icon="p"> Your password </label>
+					<input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
 				</p>
-				<p> 
-					<label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-					<input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. XXXXXXXX"/>
+				<p class="keeplogin"> 
+					<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
+					<label for="loginkeeping">Keep me logged in</label>
 				</p>
-				<p> 
-					<label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
-					<input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. XXXXXXXX"/>
+				<p class="login button"> 
+					<input type="submit" value="Login" /> 
 				</p>
-				<p class="signin button"> 
-					<input type="submit" value="Sign up"/> 
-				</p>
-				<p class="change_link">  
-					Already a member ?
-					<a href="login.html" class="to_register"><font color="blue"> Go and log in </font></a>
+			</form>
+		</div></div></li></ul>
+
 				</li></ul>
-								</p></font>
+								</p>
 			</form>
 		</div>
 		
 	</div>
 </div>
-</li>
-</ul>
-</nav>
-</font>
    <!-- Footer
  ================================================== -->
     <footer class="footer">
